# declarative-state-machine

./: Cargo.toml  README.md
src/: error.rs  events.rs  generate.rs  handlers.rs  lib.rs  machine.rs  main.rs  semantic.rs  states.rs  syntax.rs  transitions.rs
